projetos/desafio-final-dk8s/semana-3/k8s/network-policies/allow-prometheus-egress-to-kube-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-egress-to-kube-api
  namespace: tipsbank-monitoring
spec:
  podSelector:
    matchLabels:
      prometheus: kube-prometheus-stack-prometheus
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 6443
