projetos/desafio-final-dk8s/semana-3/k8s/network-policies/allow-prometheus-tipsbank-transacoes.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-tipsbank-transacoes
  namespace: tipsbank-transacoes
spec:
  podSelector:
    matchLabels:
      app: api-transacoes
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tipsbank-monitoring
      ports:
        - protocol: TCP
          port: 8080
